# unitree-go2

./: .gitignore  README.md  collect_policy_data.py  flax_to_onnx.py  jax_to_onnx.py  mujoco_policy.py  onnx_requirements.txt  requirements.txt  simulation_data.csv  stats_test.py  test_agent.py  to_onnx.py  train.py  train_OLD.py  train_handstand.py  train_handstand_and_recovery.py  train_handstand_old.py  train_loop.py  train_mujoco_handstand.py  train_velocity.py  train_vendored.py
data/: command_history.csv  (+12 more)
data/bags/: BUILD.bazel
data/bags/standard-position-forward-test-1/: contact_history.csv  policy_command_history.csv  vicon_history.csv
data/bags/standard-replay-position/: command_history.csv  contact_history.csv  imu_history.csv  policy_command_history.csv  vicon_history.csv
data/bags/standard-replay-position-2/: command_history.csv  contact_history.csv  imu_history.csv  policy_command_history.csv  vicon_history.csv
data/bags/standard_position_test_1/: policy_command_history.csv
data/bags/test_1/: command_history.csv  metadata.yaml  state_history.csv
data/bags/test_2/: command_history.csv  metadata.yaml  state_history.csv
data/bags/test_3/: command_history.csv  metadata.yaml  state_history.csv
data/bags/test_4/: command_history.csv  imu_history.csv  metadata.yaml  state_history.csv  vicon_history.csv
data/bags/test_5/: command_history.csv  imu_history.csv  policy_command_history.csv  vicon_history.csv
data/bags/test_6/: command_history.csv  policy_command_history.csv  vicon_history.csv
data/bags/test_7/: contact_history.csv  imu_history.csv
(+283 files in other folders)
